[tool.poetry]
name = "password-strength-analyzer"
version = "0.1.0"
description = "A tool for analyzing password strength and generating custom wordlists."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
nltk = "^3.6.3"
zxcvbn = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"