[metadata]
name = password-strength-analyzer
version = 0.1.0
description = A tool for analyzing password strength and generating custom wordlists.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/password-strength-analyzer
license = MIT

[options]
packages = find:
install_requires =
    argparse
    nltk
    zxcvbn

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
